Strip out fitpulse specific stuff

--- a/src/scss/open-color.scss
+++ b/src/scss/open-color.scss
@@ -368,7 +368,7 @@ $oc-orange-9: map-get($oc-orange-list, '9');
 $oc-color-spectrum: 9;
 
 $oc-color-list: (
-  'primary': $oc-violet-list,
+  'primary': $oc-indigo-list,
   'gray': $oc-gray-list,
   'red': $oc-red-list,
   'pink': $oc-pink-list,
