--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -2,7 +2,7 @@
 html,
 body {
   @include font-normal;
-  font-family: 'Inter', Helvetica, Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
