--- a/src/AppLayout.scss
+++ b/src/AppLayout.scss
@@ -4,6 +4,22 @@
 @import './scss/typography';
 @import './scss/utils';
 
+#root {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.main {
+  flex-grow: 1;
+  min-height: 0;
+  overflow-y: auto;
+}
+
 body {
   @include scrollbar;
 }
