--- a/src/music/components/AudioPlayer/AudioPlayer.scss
+++ b/src/music/components/AudioPlayer/AudioPlayer.scss
@@ -2,99 +2,109 @@
 @import '~/scss/variables';
 
 .AudioPlayer {
+  @include shadow-md;
   background-color: white;
   border-top: 1px solid $border;
-  color: black;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 1);
-  min-height: 124px;
   width: 100%;
 
   &__container {
     align-items: center;
     display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    max-width: 1280px;
+    justify-content: center;
     min-height: 100%;
-    padding: 0 1rem;
+    padding: 1rem;
+    position: relative;
     width: 100%;
   }
 
   &__info {
-    display: flex;
     align-items: center;
+    display: flex;
+    gap: 1rem;
+    position: absolute;
+    left: 1rem;
+    top: 1rem;
   }
 
   &__image {
-    height: 96px;
-    width: 96px;
-    margin-right: 2rem;
+    height: 4rem;
+    width: 4rem;
+  }
+
+  &__links {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    font-size: 0.875rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 10rem;
+
+    a:hover {
+      text-decoration: underline;
+    }
   }
 
   &__controls {
+    display: flex;
+    flex-direction: column;
     flex: 1;
-    margin: 0 2rem;
+    gap: 0.5rem;
+    max-width: 40rem;
   }
 
   &__buttons {
-    position: relative;
-    text-align: center;
-    margin-bottom: 1.5rem;
+    align-items: center;
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
   }
 
   &__flex {
+    align-items: center;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    gap: 0.5rem;
+  }
+
+  &__currentTime,
+  &__duration {
+    font-size: 0.75rem;
+    text-align: center;
+    width: 3rem;
   }
 
   &__trackerContainer {
+    flex: 1;
+    height: 0.5rem;
     position: relative;
     width: 100%;
-    min-width: 120px;
-    flex: 1;
-    margin: 0 1.5rem;
-    padding: 1rem 0;
-    height: 5px;
   }
 
   #tracker {
     background-color: $border;
-    height: 5px;
-    position: absolute;
+    border-radius: 0.25rem;
+    height: 0.5rem;
     left: 0;
+    position: absolute;
     right: 0;
-    top: calc(50% - 2.5px);
+    top: 0;
     width: 100%;
   }
 
-  #currentTime,
-  #totalTime {
-    text-align: center;
-    width: 60px;
-  }
-
   #tracked {
-    height: 5px;
     background-color: oc-get-color('primary', '9');
-    width: 20%;
-    position: absolute;
-    top: calc(50% - 2.5px);
+    border-radius: 0.25rem;
+    height: 0.5rem;
     left: 0;
+    position: absolute;
+    top: 0;
+    width: 0%;
   }
 }
 
-@media screen and (max-width: 680px) {
-  .AudioPlayer {
-    min-height: 90px;
-    &__controls {
-      margin: 0;
-    }
-    &__buttons {
-      margin-bottom: 0.5rem;
-    }
-  }
-
+@include breakpoint('md') {
   .hideOnMobile {
     display: none !important;
   }
