--- a/src/music/components/AudioPlayer/AudioPlayer.scss
+++ b/src/music/components/AudioPlayer/AudioPlayer.scss
@@ -87,6 +87,7 @@
     border-radius: 0.25rem;
     height: 0.5rem;
     left: 0;
+    pointer-events: none;
     position: absolute;
     right: 0;
     top: 0;
@@ -98,6 +99,7 @@
     border-radius: 0.25rem;
     height: 0.5rem;
     left: 0;
+    pointer-events: none;
     position: absolute;
     top: 0;
     width: 0%;
