--- a/src/AppLayout.scss
+++ b/src/AppLayout.scss
@@ -1,8 +1,5 @@
-@import './scss/mixins';
+@import 'punkweb-ui/scss/punkweb-ui';
 @import './scss/variables';
-@import './scss/defaults';
-@import './scss/typography';
-@import './scss/utils';
 
 #root {
   display: flex;
@@ -25,7 +22,7 @@ body {
 }
 
 a {
-  color: oc-get-color('primary', '9');
+  color: var(--primary-9);
 }
 
 hr {
@@ -100,7 +97,7 @@ hr {
     }
 
     &[data-highlighted] {
-      background-color: oc-get-color('primary', '9');
+      background-color: var(--primary-9);
       color: white !important;
 
       .DropdownMenu__icon {
@@ -125,7 +122,7 @@ hr {
   }
 
   &__subTrigger[data-state='open'] {
-    background-color: oc-get-color('primary', '9');
+    background-color: var(--primary-9);
     color: white !important;
   }
 
