--- a/src/ui/SearchDropdown/SearchDropdown.scss
+++ b/src/ui/SearchDropdown/SearchDropdown.scss
@@ -19,7 +19,7 @@
     user-select: none;
 
     &:hover {
-      background-color: oc-get-color('primary', '9');
+      background-color: var(--primary-9);
       color: white !important;
     }
   }
